# traveler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  convert_to_fasta.sh  traveler_format.txt
Documents/: ToDo  poznamky
InFiles/: african_frog.fold  african_frog.seq  artemia_salina.fold  artemia_salina.seq  blue_mussel.fold  blue_mussel.seq  cicadas.fold  cicadas.seq  echinococcus_granulosus.fold  echinococcus_granulosus.seq  fruit_fly.fold  fruit_fly.seq  homo_sapiens.bpseq  homo_sapiens.ps  homo_sapiens_RNAfold.ps  kenyan_frog.seq  mfold.ps  microciona_prolifera.fold  microciona_prolifera.seq  mnemiopsis_leidyi.fold  mnemiopsis_leidyi.seq  rabbit.seq  rat.fold  rat.seq  scorpion.fold  scorpion.seq  sea_scallop.fold  sea_scallop.seq  tripedalia_cystophora.fold  tripedalia_cystophora.seq  zatvorky
InFiles/test/: 1.hairpin.fold  1.hairpin.ps  1.hairpin.seq  2.interior.fold  2.interior.ps  2.interior.seq  3.multibranch.fold  3.multibranch.seq  4.fullbranch.fold  4.fullbranch.ps  4.fullbranch.seq
MapovanieBaz/: Makefile  files_read.cpp  files_read.hpp  main.cpp  rnafold.cpp  rnafold.hpp  tree.cpp  tree.hpp  types.cpp  types.hpp
RP/: Makefile  Makefile.RNAfold  Makefile.RTED  app.cpp  app.hpp  checks.cpp  checks.hpp  chen-zhang.cpp  chen-zhang.hpp  circle.cpp  compact.cpp  compact.hpp  compact_circle.cpp  compact_circle.hpp  compact_init.cpp  compact_init.hpp  compact_maker.cpp  compact_maker.hpp  compact_maker_utils.cpp  compact_maker_utils.hpp  compact_utils.cpp  compact_utils.hpp  functs.hpp  generator.cpp  generator.hpp  gted.cpp  gted.hpp  gted_LR.cpp  macros.hpp  main.cpp  mapping.cpp  mapping.hpp  node.hpp  node_base.hpp  nodes.cpp  nodes.hpp  path_strategies.hpp  point.cpp  point.hpp  ps.cpp  (+36 more)
RP/java_RTED/: Makefile  in6  input-1762  rna.ps
RP/precomputed/: frog-human.map  frog-mouse.map  frog-rabbit.map  human-mouse.map  human-rabbit.map  mouse-frog.map  mouse-human.map  mouse-rabbit.map  rabbit-human.map  rabbit-mouse.map
RP/ted/: Makefile  gted.cpp  rted.cpp  tests.cpp  tests.hpp
RP/tests/: rted_test.cpp  tests.cpp  tests.hpp
RP/tree/: Makefile  node_base.hpp  rna_tree.hpp  tree_base.hpp  tree_base_utils.hpp
assets/json/: json.hpp
data/: README.md
data/fungi/: d.16.e.A.bracteata.fasta
data/metazoa/: README.md  african_frog.fasta  african_frog.ps  artemia_salina.fasta  artemia_salina.ps  blue_mussel.fasta  blue_mussel.ps  cicadas.fasta  cicadas.ps  echinococcus_granulosus.fasta  echinococcus_granulosus.ps  fruit_fly.fasta  human.ps  (+21 more)
experiments/: README.md
src/: .ycm_extra_conf.py  Doxyfile  Makefile  app.cpp  app.hpp  compact.cpp  compact.hpp  compact_circle.cpp  compact_circle.hpp  compact_utils.cpp  compact_utils.hpp  def.mk  generator.cpp  generator.hpp  gted.cpp  gted.hpp  gted_mapping.cpp  gted_tree.cpp  gted_tree.hpp  logger.cpp  logger.hpp  main.cpp  make.sh  mapping.cpp  mapping.hpp  module.mk  overlap_checks.cpp  overlap_checks.hpp  point.cpp  point.hpp  reformat.sh  rna_tree.cpp  rna_tree.hpp  rna_tree_label.cpp  rted.cpp  rted.hpp  run.sh  strategy.cpp  strategy.hpp  tests.cpp  (+18 more)
tests/: README.md  compare.sh  run.sh
text/: .gitignore
utils/: README.md  bpseq2fasta.py  enrich_json.py  infernal2mapping.py  json2svg.py  ssmod.py  traveler2xrna  traveler2xrna.py
(+266 files in other folders)
